decrease keyboard width to ensure all keys on mobile page

--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 110%;
+    width: 105%;
     height: 25%;
 }
 
